--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "firebase": "^8.1.2",
+    "express": "^4.17.1",
+    "firebase": "^8.2.1",
+    "lodash": "^4.17.20",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.6.0",
+    "vuexfire": "^3.2.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "^4.5.9",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
