--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "express": "^4.17.1",
     "firebase": "^8.2.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-chat-scroll": "^1.4.0",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.6",
     "vuex": "^3.6.0",
